--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
 .App {
   text-align: center;
+  padding: auto;
+}
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input[type=text], input[type=number],
+input[type=date],select, textarea {
+  width: 10%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input[type=submit], button{
+
+  background-color: blue;
   color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: center;
+}
+input[type=submit]:hover{
+  background-color: chartreuse;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  
+  background-color: red;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
 }
+
+
+tr:hover {background-color: greenyellow}
+
+
+table, td, th {  
+  border: 1px solid #ddd;
+  text-align: center;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  padding: 5px;
+}
+
+th
+{
+  color: blue;
+  margin: 10px;
+}
+
+
